# advent-of-code

./: .gitignore  README.md  environment.yml  pyproject.toml
2023/Day11/: scratch.ipynb
2023/Day13/: scratch.ipynb
2023/Day14/: scratch.ipynb
2023/Day15/: solution.ipynb
2024/: .gitignore
2024/01/: day01.ipynb
2024/02/: day02.ipynb
2024/03/: day03.ipynb
2024/04/: day04.ipynb
2024/05/: day05.ipynb
2024/06/: day06.ipynb
2024/07/: day07.ipynb
2024/08/: day08.ipynb
2024/09/: day09.ipynb
2024/10/: day10.ipynb
2024/11/: day11.ipynb
2024/12/: day12.ipynb
2024/13/: day13.ipynb
2024/14/: day14.ipynb
2024/15/: day15.ipynb
2024/16/: day16.ipynb
2024/day17/: day17.ipynb
2025/01/: day01.ipynb
2025/02/: day02.ipynb
2025/day/10/: answer.ipynb
2025/day/11/: answer.ipynb
2025/day/12/: answer.ipynb
2025/day/3/: answer.ipynb
2025/day/4/: answer.ipynb
2025/day/5/: answer.ipynb
2025/day/6/: answer.ipynb
2025/day/7/: answer.ipynb
2025/day/8/: answer.ipynb
2025/day/9/: answer.ipynb
